GetListOfEntriesOfLedger implementation
- fix deprecated warnings for java 11